# Score_miner

./: .gitignore  Architecture.md  Importan_claudesad.md  m_8218320.yaml  plan_for_score.md  sn44_current_best_plan_2026_05_24.md  till_now.md
public_detect/: AFTER_TRAINING.md  GO_LIVE_STEPS.md  README.md  SHIP_ITER2.md  TODO.md  other_miner_do.md  pyproject.toml
public_detect/configs/data_sources/: beverage_coco2017.yaml  beverage_roboflow_containers.yaml  beverage_taco.yaml  phase4_sources.yaml
public_detect/configs/elements/: beverage.yaml  car_wash.yaml
public_detect/configs/export/: README.md
public_detect/configs/training/: README.md  beverage_yolo11n.yaml  beverage_yolo11n_phase4_external_v1.yaml  beverage_yolo11n_phase4_taco_smoke_v2.yaml  beverage_yolo11n_smoke.yaml  beverage_yolo11n_taco_only_v1.yaml  beverage_yolo26n.yaml  beverage_yolo26s.yaml  beverage_yolo26s_iter2.yaml  beverage_yolo26s_modelB.yaml  beverage_yolo26s_modelC.yaml  beverage_yolo26s_phase4_winner_v1.yaml  beverage_yolov8n_control.yaml  car_wash_yolo11n.yaml  car_wash_yolo26n.yaml  car_wash_yolo26s.yaml  car_wash_yolov8n_control.yaml
public_detect/deploy/manak0_Detect-beverage_modelB/: size_report.json
public_detect/deploy/manak0_Detect-beverage_modelB_t035/: chute_config.yml  miner.py  miner_config.json  size_report.json
public_detect/deploy/manak0_Detect-beverage_yolo11n_v1/: size_report.json
public_detect/deploy/manak0_Detect-beverage_yolo26s_v1/: miner.py  miner_config.json  size_report.json
public_detect/deploy/modelB_onnx/: size_report.json
public_detect/docs/: current_status_and_gpu_runbook.md  phase4_data_plan.md  research_sources.md  score_rules.md
public_detect/scripts/: autolabel_yolo_world.py  build_deploy_repo.py  build_phase4_dataset.py  build_yolo_dataset.py  check_gpu_env.py  check_repo_size.py  download_coco_beverage.sh  download_external_all.sh  download_kaggle_drinkwaste.py  download_kaggle_smokedrink.py  download_manako_challenge_frames.py  download_openimages_beverage.py  download_starter_pack.py  export_failure_review.py  export_yolo_onnx.py  extract_video_frames.py  harvest_all_manako.py  ingest_coco_source.py  iter2_rebuild_and_warmstart.sh  make_contact_sheet.py  prepare_phase1_data.sh  probe_manako_fresh.py  probe_via_winner.py  render_starter_labels.py  render_yolo_labels.py  retrain_phase4_external.sh  run_phase1b_baselines.sh  score_threshold_sweep.py  score_winner_style.py  scrape_manako_fast.py  setup_gpu_env.sh  simulate_validator_score.py  smoke_deploy_miner.py  train_baseline.py
public_detect/src/public_detect/: __init__.py  deploy_repo.py  (+11 more)
public_detect/tests/: test_deploy_repo.py  test_export_utils.py  test_ingest.py  test_manako.py  test_review.py  test_score_eval.py  test_training_config.py  test_yolo_dataset.py
score_miner_dev/: pyproject.toml
score_miner_dev/notes/: benchmark_postprocess_smoke.md  benchmark_results.md  benchmark_role_cleanup_smoke.md  benchmark_team_color_smoke.md  benchmark_tracking_smoke.md  class_mapping.md  memory_budget.md
score_miner_dev/tests/: test_miner_runtime.py  test_role_cleanup.py  test_team_color_carry_forward.py
(+4345 files in other folders)
