[project]
name = "sn44-public-detect"
version = "0.1.0"
description = "SN44 Score public Detect training and evaluation workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
    "huggingface-hub>=1.0",
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "pillow>=11.0",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "ultralytics>=8.4.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.14",
]
tracking = [
    "mlflow>=3.5",
]
review = [
    "supervision>=0.27",
]
inference = [
    "sahi>=0.11.28",
]
export = [
    "onnx>=1.12.0,<2.0.0",
    "onnxruntime>=1.26.0",
    "onnxslim>=0.1.71",
]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/public_detect"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
